# trader_evaluator

./: .env.agent.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  SANITY_CHECK.md  clippy.toml  package-lock.json  package.json  position_size_simulation_simple.py
.cursor/rules/: brainstorming.mdc  dispatching-parallel-agents.mdc  evaluator-deploy.mdc  evaluator-guidance.mdc  executing-plans.mdc  finishing-a-development-branch.mdc  requesting-code-review.mdc  systematic-debugging.mdc  test-driven-development.mdc  using-git-worktrees.mdc  verification-before-completion.mdc  writing-plans.mdc
.gemini/skills/evaluator-deploy/: SKILL.md
.gemini/skills/evaluator-guidance/: SKILL.md
.gemini/skills/finishing-a-development-branch/: SKILL.md
.gemini/skills/systematic-debugging/: SKILL.md
.gemini/skills/test-driven-development/: SKILL.md
.gemini/skills/using-git-worktrees/: SKILL.md
.gemini/skills/writing-plans/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.opencode/plans/: 2026-02-08-architecture-enforcement.md  2026-02-08-cloudflared-auth.md  2026-02-08-polymarket-profile-links.md
archive/: simulation_results.md
config/: default.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  db.rs  funnel.rs  lib.rs  observability.rs  polymarket.rs  types.rs
crates/common/tests/: db_query_timing.rs  integration_real_apis.rs  observability.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: cli.rs  event_bus.rs  events.rs  flow_metrics.rs  ingestion.rs  jobs.rs  main.rs  market_scoring.rs  metrics.rs  paper_trading.rs  persona_classification.rs  scheduler.rs  wallet_discovery.rs  wallet_features.rs  wallet_rules_engine.rs  wallet_scoring.rs
crates/evaluator/src/events/: dlq.rs  mod.rs  replay.rs  subscribers.rs
crates/evaluator/src/jobs/: fetcher_impls.rs  fetcher_traits.rs  ingestion_jobs.rs  maintenance.rs  mod.rs  pipeline_jobs.rs  tracker.rs
crates/trader/: Cargo.toml
crates/trader/config/: trader.toml
crates/trader/migrations/: 001_initial.sql  002_book_snapshots.sql
crates/trader/src/: config.rs  db.rs  main.rs  polymarket.rs  types.rs
crates/trader/src/api/: control.rs  mod.rs  trades.rs  wallets.rs
crates/trader/src/engine/: detector.rs  mirror.rs  mod.rs  settlement.rs  watcher.rs
crates/trader/src/engine/fillability/: check.rs  mod.rs  recorder.rs  storage.rs
crates/trader/src/risk/: fidelity.rs  mod.rs  portfolio.rs  slippage.rs  wallet.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs  metrics.rs  models.rs  queries.rs
crates/web/templates/: base.html  dashboard.html  excluded.html  journey.html  login.html  trader_overview.html  wallet_scorecard.html
crates/web/templates/partials/: async_funnel_bar.html  events.html  excluded_table.html  funnel_bar.html  jobs_status.html  markets.html  paper.html  paper_traded_wallets.html  persona_breakdown.html  persona_funnel_bar.html  personas_summary_bar.html  rankings.html  status_strip.html  suitable_personas.html  tracking.html  unified_funnel_bar.html  wallets.html
dashboards/: evaluator-flow.json  evaluator-funnel.json  evaluator-logs.json  evaluator-overview.json  tracing-alerts.json
deploy/: .server-info  .server-info.example  alloy-config-tempo.alloy  alloy-config.alloy  cleanup-grafana-folder-mixup.sh  deploy.sh  provision.sh  purge-raw.sh  push-dashboards.sh  setup-cloudflared.sh  setup-evaluator.sh  setup-server.sh
deploy/systemd/: evaluator.service  web.service
docs/: ARCHITECTURE.md  DASHBOARDS.md  DATA_JOURNEY_EXAMPLE.md  DEPLOYMENT.md  EVALUATION_STRATEGY.md  EVENT_ARCHITECTURE.md  HOW_IT_WORKS.md  OBSERVABILITY.md  PAPER_TRADING_JOURNEY.md  REFERENCE.md  RUNBOOK.md  SANITY_CHECK_RISK_MANAGEMENT.md  STRATEGY_BIBLE.md  code-review-Task12-result.md  code-review-request-Task12.md  inspiration.txt  on_risk.txt  on_risk2.txt  prd.txt  verification-2026-02-14-realized-pnl.txt
docs/plans/: 2026-02-08-evaluator-frontend-dashboard.md  2026-02-08-strategy-enforcement.md  2026-02-08-wallet-evaluator-mvp.md  2026-02-09-funnel-info-tooltips.md  2026-02-10-aws-server-deploy-fix.md  2026-02-10-dashboard-perf-indexes.md  2026-02-10-paper-fast-path-and-saga.md  2026-02-10-paper-tick-gating.md  2026-02-10-persona-taxonomy-enrichment.md  2026-02-10-task-20-mscore-real-inputs.md  2026-02-10-task-28-funnel-metrics-grafana-ui.md  2026-02-10-web-nonblocking-sqlite.md  2026-02-11-max-wallet-discovery.md  2026-02-11-unified-funnel-and-proportional-sizing.md  2026-02-13-on-demand-features-implementation.md  2026-02-13-on-demand-features.md  2026-02-13-parallelization-performance-validation.md  2026-02-13-persona-classification-parallelization-design.md  2026-02-14-realized-unrealized-pnl-implementation.md  2026-02-14-realized-unrealized-pnl-tracking.md  MASTER_STRATEGY_IMPLEMENTATION_PLAN.md  paper-orderbook-verification.md
docs/plans/archive/: 2026-02-08-condense-claude-md.md  2026-02-08-evaluator-frontend-dashboard.md  2026-02-08-wallet-evaluator-mvp.md
hooks/: pre-commit  pre-push
scripts/: __init__.py  check_pr_review.sh  check_skills_sync.sh  find_server.sh  prod_backup_and_reset_db.sh  prod_backup_and_reset_keep_wallets_only.sh  prod_clear_persona_state.sh  reset_db_keep_markets_wallets.sh  test_check_pr_review.sh  todo_guard.py  validate_scorecard_trades.mjs
scripts/tests/: __init__.py  test_todo_guard.py
tests/: test_push_dashboards_dry_run.sh
tests/fixtures/: gamma_markets_sample.json  trades_sample.json
