[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/evaluator",
    "crates/web",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
axum = "0.8"
askama = "0.15"
tower-http = { version = "0.6", features = ["fs"] }
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"

# === Workspace-wide lint configuration ===
# These lints enforce clean architecture. Run `cargo clippy` to check.
# Lints here interact with `-- -D warnings` in make test, so only
# enable lints the codebase already passes.
[workspace.lints.clippy]
too_many_lines = "warn"           # threshold in clippy.toml (250, ratchet to 100)
type_complexity = "warn"
large_enum_variant = "warn"
module_inception = "warn"
needless_pass_by_value = "warn"
# TODO: Enable after cleanup sprints:
# cognitive_complexity = "warn"               # 1 function exceeds threshold (31/25)
# redundant_closure_for_method_calls = "warn" # 5 violations
# unwrap_used = "warn"                        # 200+ violations
# expect_used = "warn"                        # 3 violations

[workspace.lints.rust]
unused_must_use = "deny"
